--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -4,14 +4,9 @@
   --gap-small: 0.75rem;
   --gap-medium: 1rem;
   --gap-large: 1.25rem;
-  --gap-larger: 2rem;
-  --gap-very-large: 4rem;
+  --gap-larger: 1.5rem;
+  --gap-very-large: 2rem;
   --gap-insanely-large: 8rem;
-  
-  // Relative gaps
-  --gap-relative-smaller: 0.125em;
-  --gap-relative-small: 0.5em;
-  --gap-relative-medium: 1em;
 
   // Sizes
   --size-smaller: 1rem;
